--- a/angular.json
+++ b/angular.json
@@ -96,6 +96,7 @@
             "styles": [
               "src/styles.scss"
             ],
+            "codeCoverage": true,
             "scripts": []
           }
         },
